Fix overflow of text

--- a/style.css
+++ b/style.css
@@ -87,10 +87,6 @@ body {
     -moz-box-shadow: 48px -52px 54px -89px rgba(0,0,0,0.75) inset;
 }
 
-.ce {
-
-}
-
 .equals {
     flex-grow: 1;
 }
